--- a/tox.ini
+++ b/tox.ini
@@ -24,11 +24,13 @@ extras =
   10x
   storage
 changedir = tests
+#changedir = {envtmpdir}
 commands = pytest \
-           --cov "{envsitepackagesdir}/sourmash" \
+           --cov sourmash \
            --cov-config "{toxinidir}/tox.ini" \
            --junitxml {toxworkdir}/junit.{envname}.xml \
-           {posargs:.}
+           {posargs} {toxinidir}
+#           --cov "{envsitepackagesdir}/sourmash" \
 
 [testenv:py38]
 extras =
