--- a/src/core/Cargo.toml
+++ b/src/core/Cargo.toml
@@ -25,6 +25,7 @@ parallel = ["rayon"]
 backtrace = "=0.3.46" # later versions require rust 1.40
 byteorder = "1.3.4"
 cfg-if = "0.1.10"
+dyn-clone = "1.0.1"
 failure = "0.1.8"  # can remove after .backtrace() is available in std::error::Error
 finch = { version = "0.3.0", optional = true }
 fixedbitset = "0.3.0"
@@ -41,6 +42,7 @@ primal-check = "0.2.3"
 thiserror = "1.0"
 typed-builder = "0.7.0"
 getset = "0.1.1"
+typetag = "0.1.4"
 
 [target.'cfg(all(target_arch = "wasm32", target_vendor="unknown"))'.dependencies.wasm-bindgen]
 version = "0.2.62"
