move most of setup.py to pyproject.toml and setup.cfg
fixing setuptools_scm

use isolated build for package creation

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,86 @@
 [metadata]
-description-file = README.md
-long-description-content-type = text/markdown
+name = sourmash
+description = tools for comparing DNA sequences with MinHash sketches
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/dib-lab/sourmash
+author = C. Titus Brown
+author_email = titus@idyll.org
+license = BSD 3-clause
+classifiers =
+    Development Status :: 5 - Production/Stable
+    Environment :: Console
+    Environment :: MacOS X
+    Intended Audience :: Science/Research
+    License :: OSI Approved :: BSD License
+    Natural Language :: English
+    Operating System :: POSIX :: Linux
+    Operating System :: MacOS :: MacOS X
+    Programming Language :: Rust
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Topic :: Scientific/Engineering :: Bio-Informatics
+project_urls = 
+    Documentation = https://sourmash.readthedocs.io
+    CI = https://travis-ci.com/dib-lab/sourmash
+
+[options]
+zip_safe = False
+platforms = any
+#packages = find: exclude=["tests", "benchmarks"]
+packages = find:
+include_package_data = True
+install_requires =
+    screed>=0.9
+    cffi>=1.14.0
+    numpy
+    enum34; python_version < "3.4"
+    matplotlib
+    scipy
+    deprecation>=2.0.6
+
+[options.packages.find]
+exclude =
+    tests
+    benchmarks
+
+[bdist_wheel]
+universal = 1
+
+# for explanation of %(extra)s syntax see:
+# https://github.com/pypa/setuptools/issues/1260#issuecomment-438187625
+# this syntax may change in the future
+[options.extras_require]
+test =
+    pytest
+    pytest-cov
+    recommonmark
+    hypothesis
+demo =
+    jupyter
+    jupyter_client
+    ipython
+doc =
+    sphinx
+    myst-parser[sphinx]
+    alabaster
+    sphinxcontrib-napoleon
+    nbsphinx
+    ipython
+10x =
+    bam2fasta==1.0.4
+storage =
+    ipfshttpclient>=0.4.13
+    redis
+all = 
+    %(test)s
+    %(demo)s
+    %(doc)s
+    %(10x)s
+    %(storage)s
+
+[options.entry_points]
+console_scripts =
+    sourmash = sourmash.__main__:main
