--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -12,5 +12,5 @@ global-exclude *.rlib
 global-exclude *.orig
 global-exclude *.pyc
 global-exclude *.so
-prune tests/test-data/
-global-exclude *.git/
+prune tests/test-data
+global-exclude *.git
