--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,13 @@
 [build-system]
 requires = [
-    "setuptools >= 40.0.4",
-    "setuptools_scm >= 2.0.0, <4",
+    "setuptools >= 42",
+    "setuptools_scm[toml] >= 3.4.0, <4",
     "setuptools_scm_git_archive",
+    "milksnake",
     "wheel >= 0.29.0",
-    "Cython >= 0.25.2",
 ]
 build-backend = 'setuptools.build_meta'
+
+[tool.setuptools_scm]
+write_to = "sourmash/version.py"
+git_describe_command = "git describe --dirty --tags --long --match v* --first-parent"    
