isolate test running

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,7 +54,7 @@ universal = 1
 # this syntax may change in the future
 [options.extras_require]
 test =
-    pytest
+    pytest>=6
     pytest-cov
     recommonmark
     hypothesis
