--- a/tox.ini
+++ b/tox.ini
@@ -24,13 +24,11 @@ extras =
   10x
   storage
 changedir = tests
-#changedir = {envtmpdir}
-commands = pytest \
-           --cov sourmash \
+commands = pytest --basetemp="{envtmpdir}" \
+           --cov "{envsitepackagesdir}/sourmash" \
            --cov-config "{toxinidir}/tox.ini" \
            --junitxml {toxworkdir}/junit.{envname}.xml \
-           {posargs} {toxinidir}
-#           --cov "{envsitepackagesdir}/sourmash" \
+           {posargs}
 
 [testenv:py38]
 extras =
