add some pyscaffold-inspired changes

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = sourmash
 description = tools for comparing DNA sequences with MinHash sketches
 long_description = file: README.md
-long_description_content_type = text/markdown
+long_description_content_type = text/markdown; charset=UTF-8
 url = https://github.com/dib-lab/sourmash
 author = C. Titus Brown
 author_email = titus@idyll.org
@@ -29,8 +29,9 @@ project_urls =
 [options]
 zip_safe = False
 platforms = any
-#packages = find: exclude=["tests", "benchmarks"]
 packages = find:
+#package_dir =
+#    =src
 include_package_data = True
 install_requires =
     screed>=0.9
@@ -42,6 +43,7 @@ install_requires =
     deprecation>=2.0.6
 
 [options.packages.find]
+#where = src
 exclude =
     tests
     benchmarks
@@ -84,3 +86,20 @@ all =
 [options.entry_points]
 console_scripts =
     sourmash = sourmash.__main__:main
+
+[tool:pytest]
+addopts =
+    --doctest-glob='doc/*.md'
+norecursedirs =
+    utils
+    build
+    buildenv
+    .tox
+    .asv
+    .eggs
+python_files =
+    sourmash/*.py
+    tests/*.py
+testpaths =
+    tests
+    doc
