--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,39 +1,70 @@
+default_language_version:
+  python: python3
 repos:
--   repo: https://github.com/python/black
-    rev: 19.3b0
-    hooks:
-    -   id: black
-        args: [--safe]
-        language_version: python3.7
--   repo: https://github.com/asottile/blacken-docs
-    rev: v0.5.0
-    hooks:
-    -   id: blacken-docs
-        additional_dependencies: [black==19.3b0]
-        language_version: python3.7
--   repo: https://github.com/asottile/seed-isort-config
-    rev: v1.7.0
-    hooks:
-    -   id: seed-isort-config
-        args: [--application-directories, "sourmash:."]
--   repo: https://github.com/pre-commit/mirrors-isort
-    rev: v4.3.15
-    hooks:
-    -   id: isort
-        additional_dependencies: [toml]
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.1.0
-    hooks:
-    -   id: trailing-whitespace
-        exclude: 'tests/test-data'
-    -   id: end-of-file-fixer
-        exclude: 'tests/test-data'
-    -   id: check-yaml
-    -   id: debug-statements
-    -   id: flake8
-        additional_dependencies: ["flake8-bugbear == 18.8.0"]
-        language_version: python3.7
--   repo: https://github.com/asottile/pyupgrade
-    rev: v1.12.0
-    hooks:
-    -   id: pyupgrade
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v3.1.0
+  hooks:
+  - id: check-ast
+  - id: check-builtin-literals
+  - id: check-docstring-first
+  - id: check-merge-conflict
+  - id: check-yaml
+  - id: check-toml
+  - id: debug-statements
+  - id: end-of-file-fixer
+  - id: trailing-whitespace
+    exclude: 'tests/test-data'
+  - id: end-of-file-fixer
+    exclude: 'tests/test-data'
+- repo: https://github.com/asottile/pyupgrade
+  rev: v2.7.2
+  hooks:
+  - id: pyupgrade
+- repo: https://github.com/asottile/seed-isort-config
+  rev: v2.2.0
+  hooks:
+  - id: seed-isort-config
+    args:
+      - --application-directories
+      - .:sourmash
+- repo: https://github.com/timothycrosley/isort
+  rev: 5.3.0
+  hooks:
+  - id: isort
+    additional_dependencies: [toml]
+- repo: https://github.com/psf/black
+  rev: 19.10b0
+  hooks:
+  - id: black
+    args:
+    - --safe
+    language_version: python3.7
+- repo: https://github.com/asottile/blacken-docs
+  rev: v1.7.0
+  hooks:
+  - id: blacken-docs
+    additional_dependencies:
+    - black==19.10b0
+    language_version: python3.7
+- repo: https://github.com/asottile/add-trailing-comma
+  rev: v2.0.1
+  hooks:
+  - id: add-trailing-comma
+- repo: https://github.com/pre-commit/pygrep-hooks
+  rev: v1.5.1
+  hooks:
+  - id: rst-backticks
+- repo: https://github.com/asottile/setup-cfg-fmt
+  rev: v1.11.0
+  hooks:
+  - id: setup-cfg-fmt
+    args:
+    - --min-py3-version
+    - '3.5'
+- repo: https://gitlab.com/pycqa/flake8
+  rev: 3.8.3
+  hooks:
+  - id: flake8
+    additional_dependencies:
+    - flake8-bugbear == 20.1.2
+    language_version: python3.7
