--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ repos:
   - id: check-toml
   - id: debug-statements
   - id: end-of-file-fixer
+    exclude: 'tests/test-data'
   - id: trailing-whitespace
     exclude: 'tests/test-data'
   - id: end-of-file-fixer
@@ -38,14 +39,14 @@ repos:
   - id: black
     args:
     - --safe
-    language_version: python3.7
+    language_version: python3.8
 - repo: https://github.com/asottile/blacken-docs
   rev: v1.7.0
   hooks:
   - id: blacken-docs
     additional_dependencies:
     - black==19.10b0
-    language_version: python3.7
+    language_version: python3.8
 - repo: https://github.com/asottile/add-trailing-comma
   rev: v2.0.1
   hooks:
@@ -54,17 +55,17 @@ repos:
   rev: v1.5.1
   hooks:
   - id: rst-backticks
-- repo: https://github.com/asottile/setup-cfg-fmt
-  rev: v1.11.0
-  hooks:
-  - id: setup-cfg-fmt
-    args:
-    - --min-py3-version
-    - '3.5'
+#- repo: https://github.com/asottile/setup-cfg-fmt
+#  rev: v1.11.0
+#  hooks:
+#  - id: setup-cfg-fmt
+#    args:
+#    - --min-py3-version
+#    - '3.5'
 - repo: https://gitlab.com/pycqa/flake8
   rev: 3.8.3
   hooks:
   - id: flake8
     additional_dependencies:
     - flake8-bugbear == 20.1.2
-    language_version: python3.7
+    language_version: python3.8
