--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,9 @@ build-backend = 'setuptools.build_meta'
 [tool.setuptools_scm]
 write_to = "sourmash/version.py"
 git_describe_command = "git describe --dirty --tags --long --match v* --first-parent"    
+
+[tool.isort]
+known_third_party = ["deprecation", "hypothesis", "mmh3", "numpy", "pkg_resources", "pytest", "screed", "setuptools", "sourmash_tst_utils"]
+multi_line_output = 3 
+include_trailing_comma = true
+line_length = 88
