tox.ini updates based on tox-dev/tox

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,7 @@ url = https://github.com/dib-lab/sourmash
 author = C. Titus Brown
 author_email = titus@idyll.org
 license = BSD 3-clause
+license_file = LICENSE
 classifiers =
     Development Status :: 5 - Production/Stable
     Environment :: Console
@@ -25,6 +26,8 @@ classifiers =
 project_urls = 
     Documentation = https://sourmash.readthedocs.io
     CI = https://travis-ci.com/dib-lab/sourmash
+    Source = https://github.com/dib-lab/sourmash
+    Tracker = https://github.com/dib-lab/sourmash/issues
 
 [options]
 zip_safe = False
@@ -41,6 +44,7 @@ install_requires =
     matplotlib
     scipy
     deprecation>=2.0.6
+python_requires = >=3.5
 
 [options.packages.find]
 #where = src
