--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,6 @@ git_describe_command = "git describe --dirty --tags --long --match v* --first-pa
 known_third_party = ["deprecation", "hypothesis", "mmh3", "numpy", "pkg_resources", "pytest", "screed", "setuptools", "sourmash_tst_utils"]
 multi_line_output = 3 
 include_trailing_comma = true
+force_grid_wrap = 0
 line_length = 88
+known_first_party = ["sourmash"]
