fix benchmarks for CI, add pypy wheels

--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,7 @@ setenv =
     PIP_DISABLE_VERSION_CHECK = 1
     COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
     VIRTUALENV_NO_DOWNLOAD = 1
+    PIP_EXTRA_INDEX_URL = https://antocuni.github.io/pypy-wheels/manylinux2010
 passenv =
     CURL_CA_BUNDLE
     http_proxy
