--- a/.github/workflows/asv.yml
+++ b/.github/workflows/asv.yml
@@ -16,6 +16,10 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.7
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        override: true
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
