remove 3.6 and 3.5, add coverage in travis jobs

--- a/tox.ini
+++ b/tox.ini
@@ -105,7 +105,7 @@ commands = coverage combine
            coverage xml -o {toxworkdir}/coverage.xml
            coverage html -d {toxworkdir}/htmlcov
            diff-cover --compare-branch {env:DIFF_AGAINST:origin/latest} {toxworkdir}/coverage.xml
-depends = py38, py37, py36, py35, pypy3
+depends = py38, py37, pypy3
 parallel_show_output = True
 
 [testenv:codecov]
@@ -147,7 +147,8 @@ source = sourmash/
 
 [travis]
 python =
-  3.7: py37, docs, package_description
+  3.7: py37, docs, package_description, coverage, codecov
+  3.8: py38, coverage, codecov
 
 [flake8]
 max-complexity = 22
